test/negative/feature_long.java

public class feature_long {
  public feature_long() {}
  protected long x;
}

